--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,6 @@
----
-# Only the main Sass file needs front matter (the dashes are enough)
----
+--- 
+# Only the main Sass file needs front matter (the dashes are enough) 
+--- 
 
 @charset "utf-8";
 
@@ -9,37 +9,31 @@ $font: "Segoe WPC", "Segoe UI", Helvetica, Arial, "Arial Unicode MS", sans-serif
 $header-color: #25a0da;
 
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-size: 16px;
 $base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
+$small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit: 30px;
 
-$text-color:       #111;
+$text-color: #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color: #2a7ae2;
 
-$grey-color:       #828282;
+$grey-color: #828282;
 $grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
-
-// Width of the content area
-$content-width:    800px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
+$grey-color-dark: darken($grey-color, 25%);
 
 body {
 	font-family: $font;
 }
 
 h1, h1 a {
-    color: $header-color;
-    font-size: 30px;
-    line-height: 100%;
-    font-weight: lighter;
-    margin-bottom: 30px;
+	color: $header-color;
+	font-size: 30px;
+	line-height: 100%;
+	font-weight: lighter;
+	margin-bottom: 30px;
 }
 
 // Use media queries like this:
@@ -50,16 +44,14 @@ h1, h1 a {
 //     }
 // }
 @mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+	@media screen and (max-width: $device) {
+		@content;
+	}
 }
 
-
-
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+@import 
+	"bootstrap/bootstrap",
+	"base", 
+	"layout", 
+	"syntax-highlighting";
