--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,14 @@
-<footer class="site-footer">
-	<div class="wrapper">
-		<h2 class="footer-heading">{{ site.title }}</h2>
-		<div class="footer-col-wrapper">
-			<div class="footer-col footer-col-1">
-				<ul class="contact-list">
-					<li>{{ site.title }}</li>
-					<li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+<footer>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-6 col-md-4">
+				<div>Tour</div>
+				<ul>
+					<li><a href="">Graphischer Kalender</a></li>
+					<li><a href="">Aktivitäten aufzeichnen</a></li>
+					<li><a href="">Teamwork</a></li>
+					<li><a href="">Reporting</a></li>
 				</ul>
-			</div>
-			<div class="footer-col footer-col-2">
-				<ul class="social-media-list">
-					{% if site.github_username %}
-					<li>
-						{% include icon-github.html username=site.github_username %}
-					</li>
-					{% endif %}
-
-					{% if site.twitter_username %}
-					<li>
-						{% include icon-twitter.html username=site.twitter_username %}
-					</li>
-					{% endif %}
-				</ul>
-			</div>
-			<div class="footer-col footer-col-3">
-				<p>{{ site.description }}</p>
 			</div>
 		</div>
 	</div>
