--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
-
-  </body>
-
+<body>
+	<div class="container-fluid">
+		<div class="row">
+			{% include header.html %}
+		</div>
+		<div class="row">
+			{{ content }}
+		</div>
+		<div class="row">
+			{% include footer.html %}
+		</div>
+	</div>
+</body>
 </html>
