--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,11 @@
 ---
 layout: default
 ---
-<article class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <div class="post-content">
-    {{ content }}
-  </div>
-
-</article>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-12">
+			<h1>{{ page.title }}</h1>
+			{{ content }}
+		</div>
+	</div>
+</div>
