--- a/css/main.scss
+++ b/css/main.scss
@@ -4,52 +4,7 @@
 
 @charset "utf-8";
 
-// Variables
-$font: "Segoe WPC", "Segoe UI", Helvetica, Arial, "Arial Unicode MS", sans-serif;
-$header-color: #25a0da;
-
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size: 16px;
-$base-font-weight: 400;
-$small-font-size: $base-font-size * 0.875;
-$base-line-height: 1.5;
-
-$spacing-unit: 30px;
-
-$text-color: #111;
-$background-color: #fdfdfd;
-$brand-color: #2a7ae2;
-
-$grey-color: #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark: darken($grey-color, 25%);
-
-body {
-	font-family: $font;
-}
-
-h1, h1 a {
-	color: $header-color;
-	font-size: 30px;
-	line-height: 100%;
-	font-weight: lighter;
-	margin-bottom: 30px;
-}
-
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-	@media screen and (max-width: $device) {
-		@content;
-	}
-}
-
-// Import partials from `sass_dir` (defaults to `_sass`)
+// Import partials from "sass_dir" (defaults to "_sass")
 @import 
 	"bootstrap/bootstrap",
 	"base", 
