--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				{% for my_page in site.pages %}
+				{% for my_page in site.data.menuitems_de %}
 				{% if my_page.title %}
 				<li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
 
