--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,8 +10,13 @@ h1, h2, h3 {
 }
 
 h1, h1 a {
-	font-size: 30px;
-	/*line-height: 100%;*/
-	
-	/*margin-bottom: 30px;*/
+	font-size: 32px;
+}
+
+h2, h2 a {
+	font-size: 24px;
+}
+
+h3, h3 a {
+	font-size: 28px;
 }
