--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container">
 	<div class="row">
 		<div class="col-sm-12">
-			<h1>{{ page.title }}</h1>
+			<!--<h1>{{ page.title }}</h1>-->
 			{{ content }}
 		</div>
 	</div>
