--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
 $font: "Segoe WPC", "Segoe UI", Helvetica, Arial, "Arial Unicode MS", sans-serif;
-$header-color: #25a0da;
+$main-color: #25a0da;
 
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size: 16px;
