--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<a class="site-title" href="{{ site.baseurl }}/de/">{% include timecockpit-logo.svg %}</a>
+				<a class="site-title" href="{{ site.baseurl }}/de/">{% include timecockpit-logo-white.svg %}</a>
 			</div>
 		</div>
 	</div>
