--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,8 +1,7 @@
-$font: "Segoe WPC", "Segoe UI", Helvetica, Arial, "Arial Unicode MS", sans-serif;
 $main-color: #25a0da;
 
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size: 16px;
+$base-font-family: "Segoe WPC", "Segoe UI", Helvetica, Arial, "Arial Unicode MS", sans-serif;
+$base-font-size: 14px;
 $base-font-weight: 400;
 $small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
