--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -89,6 +89,11 @@ p.highlighted {
     padding: 20px 40px;
 }
 
+p.showcase {
+	background-color: #ededed;
+    padding: 20px 20px;
+}
+
 span.highlightedText {
     font-size: 30px;
 }
