--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,9 +3,12 @@ layout: default
 ---
 <div class="container">
 	<div class="row">
-		<div class="col-sm-12">
+		<div class="col-sm-9">
 			<h1>{{ page.title }}</h1>
 			{{ content }}
+		</div>
+		<div class="col-sm-3">
+			Newsletter
 		</div>
 	</div>
 </div>
