--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
 <body>
 	{% include header.html %}
 
-	{{ content }}
+	<div class="content">
+		{{ content }}
+	</div>
 
 	{% include footer.html %}
 </body>
