--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,10 +1,12 @@
 $main-color: #25a0da;
+$highlight-color: #72bf44;
 
 $base-font-family: "Segoe WPC", "Segoe UI", Helvetica, Arial, "Arial Unicode MS", sans-serif;
-$base-font-size: 14px;
-$base-font-weight: 400;
+$base-font-size: 15px;
+$base-line-height: 1.6;
+
 $small-font-size: $base-font-size * 0.875;
-$base-line-height: 1.5;
+
 
 $spacing-unit: 30px;
 
