--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,12 @@
 ---
 layout: default
 ---
-<div class="container">
-	<div class="row">
-		<div class="col-sm-12">
-			{{ content }}
+<div class="tc-highlight-container-default">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				{{ content }}
+			</div>
 		</div>
 	</div>
 </div>
