--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,6 @@
 $main-color: #25a0da;
 $highlight-color: #72bf44;
+$header-color: #333;
 
 $base-font-family: "Segoe WPC", "Segoe UI", Helvetica, Arial, "Arial Unicode MS", sans-serif;
 $base-font-size: 15px;
