--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,56 @@
 <footer class="tc-page-footer">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-6 col-md-4">
-				<div>Tour</div>
+			<div class="tc-col hidden-xs hidden-sm col-md-2">
+				<h3>Tour</h3>
 				<ul>
 					<li><a href="">Graphischer Kalender</a></li>
 					<li><a href="">Aktivitäten aufzeichnen</a></li>
 					<li><a href="">Teamwork</a></li>
 					<li><a href="">Reporting</a></li>
+					<li><a href="">Erweiterbarkeit</a></li>
+					<li><a href="">Online und Offline</a></li>
 				</ul>
+			</div>
+
+			<div class="tc-col hidden-xs hidden-sm col-md-2">
+				<h3>Tour</h3>
+				<ul>
+					<li><a href="">Graphischer Kalender</a></li>
+					<li><a href="">Aktivitäten aufzeichnen</a></li>
+					<li><a href="">Teamwork</a></li>
+					<li><a href="">Reporting</a></li>
+					<li><a href="">Erweiterbarkeit</a></li>
+					<li><a href="">Online und Offline</a></li>
+				</ul>
+			</div>
+
+			<div class="tc-col hidden-xs hidden-sm col-md-2">
+				<h3>Tour</h3>
+				<ul>
+					<li><a href="">Graphischer Kalender</a></li>
+					<li><a href="">Aktivitäten aufzeichnen</a></li>
+					<li><a href="">Teamwork</a></li>
+					<li><a href="">Reporting</a></li>
+					<li><a href="">Erweiterbarkeit</a></li>
+					<li><a href="">Online und Offline</a></li>
+				</ul>
+			</div>
+
+			<div class="tc-col col-sm-6 col-md-3">
+				<h3>Newsletter</h3>
+			</div>
+
+			<div class="tc-col col-sm-6 col-md-3">
+				<p>
+					software architects gmbh<br />
+					Welser Straße 26<br />
+					Austria - 4060 Leonding<br />
+					<a href="mailto: support@timecockpit.com">support@timecockpit.com</a>
+				</p>
+				<p>
+					© 2016 software architects gmbh
+				</p>
 			</div>
 		</div>
 	</div>
