--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,14 +4,16 @@ $header-color: #333;
 
 $base-font-family: "Segoe WPC", "Segoe UI", Helvetica, Arial, "Arial Unicode MS", sans-serif;
 $base-font-size: 15px;
+$larger-font-size: 16px;
 $base-line-height: 1.6;
+$base-text-color: #222;
+$footer-text-color: #ddd;
 
 $small-font-size: $base-font-size * 0.875;
 
-
 $spacing-unit: 30px;
 
-$text-color: #111;
+
 $background-color: #fdfdfd;
 $brand-color: #2a7ae2;
 
