--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -44,7 +44,7 @@ div.header {
 		}
 
 		&.tc-action-button {
-			color: $highlight-color;
+			color: $main-color;
 			font-weight: bold;
 
 			span.glyphicon {
