--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-6 col-sm-6">
-				<a class="tc-logo" href="{{ site.baseurl }}{{ languagePath }}">{% include timecockpit-logo-white.svg %}</a>
+				<a class="tc-logo" href="{{ site.baseurl }}{{ languagePath }}">{% include timecockpit-logo-blue.svg %}</a>
 			</div>
 			<div class="col-xs-6 col-sm-6 header-side-menu text-right">
 				{% if page.path contains "/de/" %}
