--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -73,6 +73,10 @@ input[type=button], input[type=submit], a.linkButton, a.linkButtonMain {
 		top: 2px;
 		margin-left: 10px;
 	}
+
+	&:hover {
+		color: darken($main-color, 20%);
+	}
 }
 
 p.imageCaption {
