--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,6 +13,7 @@ h1, h2, h3 {
 	color: $header-color;
 	margin-top: 40px;
     margin-bottom: 20px;
+	text-transform: uppercase;
 
 	small {
 		color: $header-color;
