--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,6 +6,7 @@ $base-font-family: "Segoe WPC", "Segoe UI", Helvetica, Arial, "Arial Unicode MS"
 $base-font-size: 16px;
 $larger-font-size: 18px;
 $base-line-height: 1.6;
+$larger-line-height: 1.8;
 $base-text-color: #222;
 $footer-text-color: #ddd;
 
