--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<head>
+﻿<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,4 +12,5 @@
 
 	<script type="text/javascript" src="{{site.baseurl}}/scripts/jquery.js"></script>
 	<script type="text/javascript" src="{{site.baseurl}}/scripts/bootstrap.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/scripts/time-cockpit-website.js"></script>
 </head>
