--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,8 @@
 // Import partials from "sass_dir" (defaults to "_sass")
 @import 
 	"bootstrap/bootstrap",
-	"base", 
+	"base",
+    "input", 
 	"layout", 
 	"header",
 	"footer",
