--- a/_includes/authorcloud.html
+++ b/_includes/authorcloud.html
@@ -1,4 +1,4 @@
-﻿{% if page.path contains "/de/" %}
+{% if page.path contains "/de/" %}
 {% assign language = "de" %}
 {% assign languagePath = "/de/" %}
 {% else %}
