--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,16 +1,24 @@
 ---
 layout: default
 ---
-<div class="container">
-	<div class="row">
-		<div class="col-sm-9">
-			<h1>{{ page.title }}</h1>
-			{{ content }}
-		</div>
-		<div class="col-sm-3">
-			Newsletter
+
+<div class="tc-blog">
+	<div class="tc-container tc-container-white">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-9">
+					<h1>{{ page.title }}</h1>
+					{{ content }}
+				</div>
+				<div class="col-sm-3">
+					<h3>Tags</h3>
+					{% include tagcloud.html %}
+					<h3>Autoren</h3>
+					{% include authorcloud.html %}
+				</div>
+			</div>
 		</div>
 	</div>
-</div>
 
-{% include related_posts.html %}
+	{% include related_posts.html %}
+</div>
