--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -94,7 +94,7 @@ p.imageCaption {
 }
 
 /* containers */
-.tc-container-white, .tc-container-blue, .tc-container-lightgray, .tc-container-darkgray {
+.tc-container, .tc-container-white, .tc-container-blue, .tc-container-lightgray, .tc-container-darkgray, tc-container-lightblue {
 	padding-top: 60px;
 	padding-bottom: 60px;
 	position: relative;
@@ -125,6 +125,10 @@ p.imageCaption {
 	background-color: #e0e0e0;
 }
 
+.tc-container-lightblue {
+	background-color: lighten($main-color, 35%);
+}
+
 .tc-container-darkgray {
 	background-color: #444;
 
@@ -153,6 +157,7 @@ p.imageCaption {
 	}
 }
 
+/* blog */
 .tc-blogoverview {
     .tc-next,.tc-previous{
         cursor: pointer;
@@ -167,6 +172,41 @@ p.imageCaption {
     .tc-image-footer{
         font-size: 11px;
     }
+}
+
+.tc-blog {
+	.tc-related-post {
+		a {
+			text-decoration: none;
+			color: $base-text-color;
+
+			h3 {
+				color: $header-color;
+			}
+		}
+
+		p {
+			display: -webkit-box;
+			-webkit-line-clamp: 4;
+			-webkit-box-orient: vertical;
+			overflow: hidden;
+		}
+
+		div {
+			width: 100%;
+			height: 200px;
+			overflow: hidden;
+			background-color: #fff;
+			padding: 20px;
+			text-align: center;
+			vertical-align: middle;
+
+			img {
+				max-width: 100%;
+				max-height: 100%;
+			}
+		}
+	}
 }
 
 /* home */
