--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -182,9 +182,10 @@ p.imageCaption {
 
 			h3 {
 				font-size: 18px;
+				height: 38px;
 				color: $header-color;
 				display: -webkit-box;
-				-webkit-line-clamp: 1;
+				-webkit-line-clamp: 2;
 				-webkit-box-orient: vertical;
 				overflow: hidden;
 			}
