--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,4 +1,4 @@
-{% if page.path contains "/de/" %}
+{% if page.permalink contains "/de" %}
 {% assign language = "de" %}
 {% else %}
 {% assign language = "en" %}
