--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
-	<script type="text/javascript" src="{{site.baseurl}}/scripts/jquery.js"></script>
-	<script type="text/javascript" src="{{site.baseurl}}/scripts/bootstrap.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/scripts/time-cockpit-website.js"></script>
 </head>
