--- a/_includes/related_posts.html
+++ b/_includes/related_posts.html
@@ -1,6 +1,14 @@
+{% if page.permalink contains "/de" %}
+{% assign language = "de" %}
+{% else %}
+{% assign language = "en" %}
+{% endif %}
+
 {% assign all_posts = site.array %}
 
-{% for post in site.posts | sort: post.date reverse %}
+{% assign posts = site.posts | where: "lang",language %}
+
+{% for post in posts | sort: post.date reverse %}
     {% if post.id == page.id %}
         {% continue %}
     {% endif %}
@@ -15,20 +23,18 @@
 {% endfor %}
 
 
-<div class="container-fluid tc-container-lightgray">
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="container">
-                <div class="row">
-                    {% for post in all_posts limit:3 %}
-                    <div class="col-sm-4">
+<div class="tc-container tc-container-lightblue tc-related-posts-container">
+    <div class="container">
+        <div class="row row-eq-height">
+                {% for post in all_posts limit:3 %}
+                <div class="col-sm-4">
+                    <div class="tc-related-post">
                         <a href="{{site.baseurl}}{{post.permalink}}">{{post.title}} </a>
                         <br>{{post.excerpt}}<br />
                         <br> <img src="{{post.bannerimage | prepend: site.baseurl}}" /> <br />
                     </div>
-                    {% endfor %}
                 </div>
-            </div>
+                {% endfor %}
         </div>
     </div>
 </div>
