--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,16 +1,20 @@
 ---
 layout: default
 ---
-<div class="container">
-	<div class="row">
-		<div class="col-sm-9">
-			<h1>{{ page.title }}</h1>
-			{{ content }}
-		</div>
-		<div class="col-sm-3">
-			Newsletter
-		</div>
-	</div>
+<div class="tc-blog">
+    <div class="tc-container-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-9">
+                    <h1>{{ page.title }}</h1>
+                    {{ content }}
+                </div>
+                <div class="col-sm-3">
+                    Newsletter
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    {% include related_posts.html %}
 </div>
-
-{% include related_posts.html %}
