--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -93,8 +93,15 @@ p.imageCaption {
     margin-right: 20px;
 }
 
+.row-eq-height {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+}
+
 /* containers */
-.tc-container-white, .tc-container-blue, .tc-container-lightgray, .tc-container-darkgray {
+.tc-container-white, .tc-container-blue, .tc-container-lightgray, .tc-container-darkgray, .tc-container-lightblue {
 	padding-top: 60px;
 	padding-bottom: 60px;
 	position: relative;
@@ -130,6 +137,10 @@ p.imageCaption {
 
 }
 
+.tc-container-lightblue {
+	background-color: lighten($main-color, 35%);
+}
+
 .tc-container-darkgray, .tc-container-blue {
 	color: #fff;
 
@@ -154,10 +165,6 @@ p.imageCaption {
 }
 
 .tc-blogoverview {
-    .tc-next,.tc-previous{
-        cursor: pointer;
-    }
-
     .tc-blogteaser {
 	    img {
 		    width: 100%;
@@ -176,6 +183,84 @@ p.imageCaption {
 			background-image: url(/time-cockpit-website/content/images/banner.jpg);
 			background-size: cover;
 		}
+	}
+}
+
+.tc-blog {
+	.tc-related-posts-container {
+		.row {
+			margin-top: 0!important;
+		}
+	}
+
+	.tc-related-post {
+		background-color: #fff;
+		padding: 20px;
+		height: 100%;
+
+		h3 {
+			margin-top: 0;
+			line-height: $base-line-height;
+		}
+
+		a {
+			text-decoration: none;
+			color: $base-text-color;
+
+			h3 {
+				font-size: 18px;
+				color: $header-color;
+			}
+		}
+
+		p {
+
+		}
+
+		div {
+			width: 100%;
+			height: 200px;
+			overflow: hidden;
+			background-color: #fff;
+			padding: 20px;
+			text-align: center;
+			vertical-align: middle;
+
+			img {
+				max-width: 100%;
+				max-height: 100%;
+			}
+		}
+	}
+}
+
+.tc-pager {
+	text-align: center;
+	line-height: 30px;
+	vertical-align: top;
+
+	div {
+		display: inline-block;
+	}
+
+    .tc-next,.tc-previous{
+        cursor: pointer;
+    }
+
+	.tc-page-number {
+		padding-left: 20px;
+		padding-right: 20px;
+		display: inline-block;
+	}
+
+	.glyphicon {
+		top: 10px;
+		color: #999;
+		font-size: 30px;
+	}
+
+	a .glyphicon {
+		color: $main-color;
 	}
 }
 
