--- a/_includes/related_posts.html
+++ b/_includes/related_posts.html
@@ -26,15 +26,20 @@
 <div class="tc-container tc-container-lightblue tc-related-posts-container">
     <div class="container">
         <div class="row row-eq-height">
-                {% for post in all_posts limit:3 %}
-                <div class="col-sm-4">
-                    <div class="tc-related-post">
-                        <a href="{{site.baseurl}}{{post.permalink}}">{{post.title}} </a>
-                        <br>{{post.excerpt}}<br />
-                        <br> <img src="{{post.bannerimage | prepend: site.baseurl}}" /> <br />
-                    </div>
+            {% for post in all_posts limit:3 %}
+            <div class="col-sm-4">
+                <div class="tc-related-post">
+                    <a href="{{site.baseurl}}{{post.permalink}}"
+                       ga-on="click"
+                       ga-event-category="Related post"
+                       ga-event-action="click">
+                        <h3>{{post.title}}</h3>
+                        <p>{{post.excerpt}}</p>
+                        <div><img src="{{post.bannerimage | prepend: site.baseurl}}" /></div>
+                    </a>
                 </div>
-                {% endfor %}
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
