--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-﻿<head>
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,12 +11,12 @@
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
     {% if page.ref != null %}
-        {% if page.permalink contains "/de" %}
-            <link rel="alternate" href="{{site.baseurl}}{{page.ref}}" hreflang="en" />
-            <link rel="alternate" href="{{site.baseurl}}{{page.permalink}}" hreflang="de" />
+        {% if page.lang == "de" or page.permalink contains "/de" %}
+            <link rel="alternate" href="{{site.baseurl}}{{page.ref}}" hreflang="en">
+            <link rel="alternate" href="{{site.baseurl}}{{page.permalink}}" hreflang="de">
         {% else %}
-            <link rel="alternate" href="{{site.baseurl}}{{page.ref}}" hreflang="de" />
-            <link rel="alternate" href="{{site.baseurl}}{{page.permalink}}" hreflang="en" />
+            <link rel="alternate" href="{{site.baseurl}}{{page.ref}}" hreflang="de">
+            <link rel="alternate" href="{{site.baseurl}}{{page.permalink}}" hreflang="en">
         {% endif %}
     {% endif %}
 
