--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -335,3 +335,13 @@ p.imageCaption {
 		}
 	}
 }
+
+.affix{
+    position:fixed;
+    width: 293.33px;
+}
+
+.affix-bottom{
+    position:absolute;
+    bottom: auto;
+}
