--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -11,6 +11,8 @@ layout: default
 					{{ content }}
 				</div>
 				<div class="col-sm-3">
+                    <h3>Content</h3>
+                    <div class="tc-toc"></div>
 					<h3>Tags</h3>
 					{% include tagcloud.html %}
 					<h3>Autoren</h3>
