--- a/_includes/related_posts.html
+++ b/_includes/related_posts.html
@@ -23,20 +23,34 @@
 {% endfor %}
 
 
-<div class="tc-container tc-container-lightblue tc-related-posts-container">
+<div class="tc-container tc-container-lightblue tc-related-posts-container" id="tc-related-posts-container">
     <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h3>Related Posts</h3>
+            </div>
+        </div>
         <div class="row row-eq-height">
             {% for post in all_posts limit:3 %}
             <div class="col-sm-4">
                 <div class="tc-related-post">
-                    <a href="{{site.baseurl}}{{post.permalink}}"
-                       ga-on="click"
-                       ga-event-category="Related post"
-                       ga-event-action="click">
+                    <div onclick="document.location.href='{{site.baseurl}}{{post.permalink}}'"
+                         ga-on="click"
+                         ga-event-category="Related post"
+                         ga-event-action="click">
                         <h3>{{post.title}}</h3>
+                        <p class="tc-blog-details">
+                            {{ post.date | date_to_long_string }}
+                            {% if post.tags.size > 0 %}
+                            -
+                            {% endif %}
+                            {% for tag in post.tags %}
+                            <a href="{{site.baseurl}}/devblog/tags#{{ tag }}">{{ tag }}</a>{% if forloop.index < forloop.length %}, {% endif %}
+                            {% endfor %}
+                        </p>
                         <p>{{post.excerpt}}</p>
-                        <div><img src="{{post.bannerimage | prepend: site.baseurl}}" /></div>
-                    </a>
+                        <div class="tc-image"><img src="{{post.bannerimage | prepend: site.baseurl}}" /></div>
+                    </div>
                 </div>
             </div>
             {% endfor %}
